[gd_scene load_steps=10 format=2]

[ext_resource path="res://resoreces/pictrues/1617543.png" type="Texture" id=1]
[ext_resource path="res://resoreces/themes/main_menu.tres" type="Theme" id=2]
[ext_resource path="res://resoreces/pictrues/qmy9vbsdmhj11.png" type="Texture" id=3]
[ext_resource path="res://resoreces/script/main_menu2.gd" type="Script" id=4]
[ext_resource path="res://resoreces/sound_traks/hi.ogg" type="AudioStream" id=5]
[ext_resource path="res://resoreces/sound_traks/videoplayback.ogg" type="AudioStream" id=6]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float lod: hint_range(0.0, 5) = 0.0;

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/lod = 0.0

[sub_resource type="Animation" id=3]
resource_name = "blur"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:material:shader_param/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Buttn:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Start", "hello" ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 7
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttn2" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 58.0
margin_right = 202.0
margin_bottom = 124.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 142.0
margin_right = 202.0
margin_bottom = 208.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blur = SubResource( 3 )

[node name="Control2" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -229.0
margin_right = 227.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sunds" type="HSlider" parent="Control2"]
margin_left = 6.85724
margin_top = 122.102
margin_right = 464.857
margin_bottom = 175.102
min_value = -80.0
max_value = 24.0
value = -30.0
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fx" type="HSlider" parent="Control2"]
margin_left = 6.85724
margin_top = 164.102
margin_right = 464.857
margin_bottom = 217.102
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wind" type="HSlider" parent="Control2"]
margin_left = 6.85724
margin_top = 209.221
margin_right = 464.857
margin_bottom = 262.221
min_value = -80.0
max_value = 24.0
value = -25.0
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="Control2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -29.0
margin_right = 104.0
margin_bottom = 29.0
pressed = true
text = "full Screen  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control2"]
margin_left = -281.0
margin_top = 1.0
margin_right = -149.0
margin_bottom = 133.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -25.0
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -25.0
autoplay = true

[node name="Buttn" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -29.0
margin_right = 202.0
margin_bottom = 37.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttn2" to="." method="_on_Buttn2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="value_changed" from="Control2/sunds" to="." method="_on_sunds_value_changed"]
[connection signal="value_changed" from="Control2/wind" to="." method="_on_wind_value_changed"]
[connection signal="pressed" from="Control2/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="Control2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Buttn" to="." method="_on_Buttn_pressed"]
